--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>?</title>
+        <title>soon</title>
         <meta http-equiv="cache-control" content="no-cache">
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <meta name="robots" content="noindex,nofollow">
+        <meta name="robots" content="nofollow">
         <meta name="author" content="adam">
         <style>
             * { 
                 margin: 0;
                 padding: 0;
                 overflow: hidden;
-                background-color: #000;
+                background-color: #CE93D8;
             }
             video {
                 object-fit: cover;
@@ -23,7 +23,7 @@
         </style>
     </head>
     <body>
-        <video preload autoplay>
+        <video preload autoplay loop>
             <source src="assets/video.webm">
         </video>
     </body>
