--- a/about.html
+++ b/about.html
@@ -9,19 +9,19 @@
 
   <meta property="og:title" content="About">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://awkure.github.io/about">
+  <meta property="og:url" content="https://awkure.github.io/blog/about">
   <meta property="og:description" content="">
   <meta property="og:site_name" content="adam">
-  <meta property="og:image" content="https://awkure.github.io/assets/og-image.jpg">
+  <meta property="og:image" content="https://awkure.github.io/blog/assets/og-image.jpg">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content="https://awkure.github.io/about">
+  <meta name="twitter:url" content="https://awkure.github.io/blog/about">
   <meta name="twitter:title" content="About">
   <meta name="twitter:description" content="">
-  <meta name="twitter:image" content="https://awkure.github.io/assets/og-image.jpg">
+  <meta name="twitter:image" content="https://awkure.github.io/blog/assets/og-image.jpg">
 
   <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png">
-  <link href="https://awkure.github.io/feed.xml" type="application/rss+xml" rel="alternate" title="adam Last 10 blog posts" />
+  <link href="https://awkure.github.io/blog/feed.xml" type="application/rss+xml" rel="alternate" title="adam Last 10 blog posts" />
 
   
     <link type="text/css" rel="stylesheet" href="/assets/fonts.css">
@@ -55,7 +55,7 @@
     
     
       <li>
-        <a href="https://telegram.me/awkure" target="_blank" title="Telegram">
+        <a href="https://telegram.me/systemspace" target="_blank" title="Telegram">
             <p>.tg</p>
         </a>
       </li>
@@ -98,8 +98,8 @@
   <img src="/assets/about.jpg" alt="" />
   <h1>Ego</h1>
   <p>
-    I am a demiromantic, gender-fluid afro-american-asian-free-cis-white-male-proud-independent pansexual agender trans bi-lesbian-childfree nefarious feminist and a heaping pile of trash cleverly arranged to appear to be a human being. I tackle on challenging problems and try to solve them with code. I'm interested in physics and AI.
-    I also don't care about pronouns, so you can refer to me in whatever way you want to.
+    I am a demiromantic, gender-fluid afro-american-asian-free-cis-white-male-proud-independent pansexual platonic agender xenophobic zeteticist and trans-bi-lesbian-childfree pragmatic solipsist with existial appendage, certified centristic feminist-cybernazi and a heaping pile of trash cleverly arranged to appear to be a human being. I tackle on challenging problems and try to solve them with code. I'm also interested in physics and AI.
+    I also don't care about pronouns, so you can refer to me in whichever way you consider to.
   </p>
 </div>
 
