--- a/blog.html
+++ b/blog.html
@@ -97,9 +97,9 @@
         <ul class="article-list">
   
     <li class="article-list-item reveal">
-      <a href="/posts/basic-implementation-of-recursion-patterns" title="Basic implementation of recursion patterns or why my parents insisted on abortion*">
+      <a href="/posts/recursion-patterns" title="Recursion patterns*">
         <h5>
-          Basic implementation of recursion patterns or why my parents insisted on abortion*
+          Recursion patterns*
           <span class="icon icon-ios-arrow-thin-right"></span>
         </h5>
       </a>
