--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Purgatory | Home</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-        <meta name=robots" content="noindex,nofollow">
+        <meta name="robots" content="noindex,nofollow">
         <style> * { margin: 0; padding: 0; background: #000; } </style>
 	</head>
 
