--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 
 	<body>
-        <video autoplay id="v">
+        <video id="v" autoplay>
             <source src="index/video/_.mp4" type="video/mp4">
         </video>
 	</body>
