--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <div class="grid grid-centered">
       <div class="grid-cell">
         <nav class="header-nav reveal">
-  <a href="/" class="header-logo" title="adam">adam</a>
+  <a href="/blog" class="header-logo" title="adam">adam</a>
   <ul class="header-links">
     
       <li>
@@ -86,11 +86,6 @@
         </a>
       </li> 
     
-      <li>
-        <a href="http://chronoradio.online" target="_blank" title="Chronoradio">
-            <p>.ogg</p>
-        </a>
-      </li>
   </ul>
 </nav>
 
@@ -98,7 +93,7 @@
   <img src="/assets/about.jpg" alt="" />
   <h1>Ego</h1>
   <p>
-    I am a demiromantic, gender-fluid afro-american-asian-free-cis-white-male-proud-independent pansexual platonic agender xenophobic zeteticist and trans-bi-lesbian-childfree pragmatic solipsist with existial appendage, certified centristic feminist-cybernazi and a heaping pile of trash cleverly arranged to appear to be a human being. I tackle on challenging problems and try to solve them with code. I'm also interested in physics and AI.
+    I am a demiromantic, gender-fluid afro-american-asian-free-cis-white-male-proud-independent pansexual platonic agender xenophobic zeteticist and trans-bi-lesbian-childfree pragmatic solipsist with existial appendage, certified centristic feminist-cybernazi and a heaping pile of trash cleverly arranged to appear to be a human being. I tackle on challenging problems and try to solve them with code. I'm also interested in physics, philosophy, theosophy, esoteric teachings, and linguistics a bit.  
   </p>
 </div>
         <!-- WIP -->
