--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <video preload autoplay loop>
-            <source src="archive/index/video/_.mp4">
+            <source src="index/h.mp4">
         </video>
     </body>
 </html>
