--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
                 object-fit: cover;
                 width: 100vw;
                 height: 100vh;
-                -webkit-filter: hue-rotate(60deg);
-                filter: hue-rotate(60deg);
             }
         </style>
     </head>
     <body>
-        <video preload autoplay loop>
+        <video preload autoplay>
             <source src="index/h.mp4">
         </video>
     </body>
